--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier:check": "./node_modules/.bin/prettier --check .",
+    "prettier:write": "./node_modules/.bin/prettier --write ."
   },
   "dependencies": {
     "@types/node": "20.2.5",
@@ -19,6 +21,7 @@
     "next": "^13.4.8",
     "postcss": "8.4.23",
     "postmark": "^3.0.18",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
