--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["react-app", "plugin:react-hooks/recommended", "next/core-web-vitals"],
+  "extends": ["next/core-web-vitals"],
   "rules": {
     "no-duplicate-imports": "warn",
     "no-unused-vars": "off",
