--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "ethereum-cryptography": "^2.1.2",
     "firebase": "^9.22.1",
     "next": "^13.4.8",
     "postcss": "8.4.23",
